style.css
* {
  box-sizing: border-box;
}
:root {
  --white: #fafafa;
  --black: #262327;
  --green: #00c690;
  --blue: #008eb2;
  --grey: #393d3e;
}
body {
  margin: 0;
  font-size: 18px;
  color: var(--white);
  background-color: var(--black);
  font-family: "Roboto", sans-serif;
}
.scroll-container {
  scroll-behavior: smooth;
  scroll-snap-type: mandatory;
}
h1 {
  font-size: 40px;
  font-family: "Russo One", sans-serif;
  font-weight: 300;
}
h2 {
  font-size: 40px;
  font-weight: 300;
  font-family: "Russo One", sans-serif;
}
h3 {
  font-size: 32px;
  font-weight: 500;
}
h4 {
  font-family: "Russo One", sans-serif;
  font-size: 40px;
  font-weight: 300;
}
h5 {
  font-family: "Russo One", sans-serif;
  font-size: 24px;
  font-weight: 300;
  margin: 0;
}
strong {
  font-weight: 300;
  color: var(--green);
}
p {
  font-size: 18px;
}
/* SECTIONS STYLING */
section {
  width: 100%;
}
/* HERO */
.hero-one {
  width: 100%;
}
.hero-one img {
  width: 100%;
  height: 100%;
}
h1 {
  width: 90%;
  position: absolute;
  margin-top: 7rem;
  margin-left: 1.5rem;
}
.hero-two {
  width: 100%;
}
.hero-two img {
  width: 100%;
  height: 100%;
}
.text-block {
  padding-left: 17px;
  padding-right: 17px;
  width: 100%;
  color: var(--white);
  display: flex;
  flex-direction: column;
}
.text-block p {
  padding-top: 1rem;
  padding-bottom: 4rem;
}

/* NEWSLETTER */
.newsletter {
  width: 100%;
  background-color: var(--green);
  padding-bottom: 38px;
  color: var(--black);
}
.newsletter img {
  width: 100%;
}
.newsletter h3 {
  font-family: "Russo One", sans-serif;
}
.newsletter h3,
.newsletter p,
.newsletter form {
  padding-right: 17px;
  padding-left: 17px;
}
.email {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 10px;
}
.email input {
  border: none;
  height: 45px;
  padding: 12px 20px;
  outline: none;
}
.email button {
  height: 45px;
  background-color: #e1e1e1;
  border: none;
}

/* CHOOSE LIGHT SECTION */
/* MOBILE VERSION */
.studio-img-desktop {
  display: none;
}
.choose-light-desktop {
  display: none;
}
.choose-light {
  padding-left: 17px;
  padding-right: 17px;
  width: 100%;
  color: var(--white);
}
.choose-light img {
  width: 100%;
  margin-bottom: -5px;
}
.choose-light p {
  text-align: center;
  margin-bottom: 0;
}
.colors {
  display: flex;
  justify-content: center;
  gap: 10px;
  padding: 1rem 1rem 2rem 1rem;
}
.colors div {
  height: 50px;
  width: 50px;
}
.green,
.green-desktop {
  background-color: var(--green);
  transition: 1s ease;
}
.lilac,
.lilac-desktop {
  background-color: #8d1bcf;
  transition: 1s ease;
}
.pink,
.pink-desktop {
  background-color: #f831e4;
  transition: 1s ease;
}
.green:active,
.green-desktop:active {
  transform: scale(0.5);
}
.lilac:active,
.lilac-desktop:active {
  transform: scale(0.5);
}
.pink:active,
.pink-desktop:active {
  transform: scale(0.5);
}
.chosen {
  border: 1px solid var(--white);
}
.interior-img {
  width: 100%;
}
.interior-img-desktop {
  display: none;
}

/* MERCHANDISE */
/* MOBILE VERSION */
.merchandise {
  padding-left: 17px;
  padding-right: 17px;
  width: 100%;
  background-color: var(--black);
  color: var(--white);
  gap: 1rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}
.merchandise img {
  width: 100%;
  transition: 0.5s ease;
}
.merch-items-small {
  width: 100%;
  display: flex;
  gap: 1rem;
}
.merch-item-large {
  width: 100%;
}
.merch-item-small {
  width: 100%;
  object-fit: cover;
}
.merch-image {
  overflow: hidden;
}
.merch-image:hover img {
  transform: scale(1.3);
}
.merch-item-large p,
.merch-items-small p {
  text-align: end;
  padding: 0;
  margin-top: 5px;
}
.merch-item-large strong,
.merch-item-small strong {
  font-weight: 450;
}
.merchandise button {
  width: 100%;
  border: none;
  background-color: var(--green);
  color: var(--white);
  height: 45px;
  font-size: 20px;
  transition: 1s ease;
  outline: none;
}
.merchandise button:hover {
  filter: saturate(2.5);
}

/* DESKTOP VERSION */
.merchandise-desktop {
  width: 100%;
  background-color: var(--black);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
  display: none;
  padding-left: 45px;
  padding-right: 45px;
}
.merchandise-desktop img {
  width: 100%;
}
.merch-items {
  display: flex;
  justify-content: space-between;
}
.merch-image-desktop {
  width: 19rem;
  height: 19rem;
}
.merch-item ul {
  padding: 1rem;
  margin: 0;
  font-size: 14px;
}
.merch-item ul li {
  margin-top: 10px;
}
.merch-item ul li:first-child {
  margin-top: 0;
}
.merch-item button {
  width: 70%;
  border: none;
  background-color: var(--green);
  color: var(--white);
  height: 45px;
  font-size: 20px;
  transition: 1s ease;
  outline: none;
}
.merch-item button:hover {
  filter: saturate(2.5);
}
.merch-item button:active {
  transform: scale(0.5);
  border: 1px solid var(--white);
}
.soon-available {
  font-size: 12px;
  margin-top: 0;
}
.new {
  color: var(--green);
  margin: 0;
}
.merch-item {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  max-width: 300px;
  gap: 20px;
}

/* 360 SECTION */
.three-sixty {
  margin-bottom: -5px;
}
video {
  width: 100%;
}
.three-sixty h2 {
  color: var(--white);
  padding-left: 17px;
  padding-right: 17px;
}
.three-sixty h3 {
  display: none;
}
.three-sixty-viewer {
  width: 100%;
  height: 100vh;
  position: relative;
  display: none;
  flex-direction: column;
}
.three-sixty-viewer span {
  position: absolute;
  top: 0;
  left: calc(100% / 25 * var(--i));
  width: calc(100% / 25);
  height: 100%;
}
.three-sixty-viewer img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0;
  pointer-events: none;
}
.three-sixty-viewer img:nth-child(2),
.three-sixty-viewer span:hover + img {
  opacity: 1;
}

/* MOVIE TIME SECTION */
.movie-time {
  width: 100%;
  display: flex;
  flex-direction: column;
  padding-bottom: 0px;
}
.movie-time .text-block {
  background-color: var(--green);
  color: var(--black);
}
.movie-time h2 {
  padding-top: 2rem;
  padding-left: 17px;
}
.movie-time p {
  padding-bottom: 4rem;
  padding-left: 17px;
  padding-right: 17px;
}
.movie-time img {
  width: 100%;
  object-fit: cover;
}
.movie-time-img-desktop {
  display: none;
}

